<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/txv_titulo_presentacion"
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:text="@string/texto_titulo_presentacion" />

    <TextView
        android:id="@+id/txv_descripcion_presentacion"
        android:layout_width="match_parent"
        android:layout_height="244dp"
        android:text="@string/texto_descripcion_presentacion" />

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:ems="10"
        android:hint="@string/texto_usuario"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:ems="10"
        android:hint="@string/texto_contraseña"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_ingresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_ingresar" />

    <Button
        android:id="@+id/btn_registrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_registrarse" />

    <Button
        android:id="@+id/btn_omitir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_omitir" />

</LinearLayout>